# jazz-jackrabbit-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  constantes.h  game_casillero.h  game_coordenada.h  game_mundo.cpp  game_mundo.h  game_object.cpp  game_object.h  game_object_collected.cpp  game_object_collected.h  game_object_player.cpp  game_object_player.h  game_terreno.cpp  game_terreno.h  info_juego.h  main.cpp
_client_src/: client_dummy_app.cpp  client_dummy_app.h  client_dummy_main.cpp  client_dummy_protocol.cpp  client_dummy_protocol.h
_server_src/: server_dummy.cpp  server_protocol.cpp  server_protocol.h
build-editor-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  editor  editor.cbp
build-editor-Desktop-Debug/editor_autogen/EWIEGA46WW/: moc_customgraphicsview.cpp  moc_leveleditor.cpp  qrc_resources.cpp
build-editor-Desktop-Debug/editor_autogen/include/: ui_leveleditor.h
client_src/: .gitignore  Makefile  button_partida.cpp  button_partida.h  characters.h  client  client.h  client_dummy_app.cpp  client_dummy_app.h  client_dummy_main.cpp  client_dummy_protocol.cpp  client_dummy_protocol.h  client_game.cpp  client_main.cpp  client_player.cpp  client_player.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_renderer.cpp  client_renderer.h  client_sender.cpp  client_sender.h  common_socket.cpp  event_handler.cpp  event_handler.h  interfaz_grafica.cpp  interfaz_grafica.h  no_makefile  player.h  server_dummy.cpp  sprite_object.cpp  sprite_object.h  sprite_player.cpp  sprite_player.h  sprite_tile.h  spritesManager.cpp  spritesManager.h  sprites_paths.h  (+6 more)
client_src/_build/: CMakeLists.txt
client_src/interfaz_src/: button_character.cpp  button_character.h  button_partida.cpp  button_partida.h  characters.cpp  characters.h  event_handler.cpp  event_handler.h  fontManager.cpp  fontManager.h  interfaz_grafica.cpp  interfaz_grafica.h  sprite_enemy.cpp  sprite_enemy.h  sprite_object.cpp  sprite_object.h  sprite_player.cpp  sprite_player.h  sprite_proyectil.h  spritesManager.cpp  spritesManager.h  sprites_enemies.cpp  sprites_enemies.h  sprites_paths.h  sprites_players.cpp  sprites_players.h  sprites_tile_map.cpp  sprites_tile_map.h  spritesheet.cpp  spritesheet.h
client_src/music_src/: music_player.cpp  music_player.h
common_src/: constantes.h  constantes_protocolo.h  info_juego.cpp  info_juego.h  info_map.h  paddings.h  protocol.cpp  protocol.h  resolver.cpp  tile_map.cpp  tile_map.h
editor/: CMakeLists.txt  SpriteItem.h  customgraphicsview.cpp  customgraphicsview.h  leveleditor.cpp  leveleditor.h  leveleditor.ui  map.cpp  map.h  qstring_hash.h  resources.qrc
editor_src/: CMakeLists.txt  README.md  customgraphicsview.h  editor_main.cpp  editor_map_creator.cpp  editor_map_creator.h  leveleditor.cpp  leveleditor.h  leveleditor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map_writer.cpp  map_writer.h  qstring_hash.h  resources.qrc  setupwindow.cpp  setupwindow.h  setupwindow.ui  spriteitem.cpp  spriteitem.h
server_src/: common_socket.cpp  server  server_acceptor.cpp  server_acceptor.h  server_app.cpp  server_app.h  server_character_list.cpp  server_character_list.h  server_character_map.cpp  server_character_map.h  server_client.cpp  server_client.h  server_config_reader.cpp  server_config_reader.h  server_dummy.cpp  server_enemies_monitor.cpp  server_enemies_monitor.h  server_enemy.h  server_game.cpp  server_game.h  server_game_map.cpp  server_game_map.h  server_gameloop.cpp  server_gameloop.h  server_gameloop_list.cpp  server_gameloop_list.h  server_main.cpp  server_player.cpp  server_player.h  server_projectile.h  server_protocol.cpp  server_protocol.h  server_queue_list.cpp  server_queue_list.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_weapon.h
server_src/Weapons/: server_blade_gun.h  server_blaster.h  server_bouncer.cpp  server_bouncer.h  server_electro_blaster.h  server_fireball.h  server_freezer.h  server_pepper_spray.cpp  server_pepper_spray.h  server_rf_missile.h  server_seeker.cpp  server_seeker.h  server_tnt.h  server_toaster.h  server_weapon.h
server_src/Weapons/Projectile/: server_blasterball.h  server_bouncerball.h  server_electroball.h  server_fireball.h  server_iceball.h  server_projectile.h  server_rocket.h  server_seeker_rocket.h  server_toasterball.h
server_src/_build/: CMakeLists.txt  config.yaml
server_src/characters/: server_character.cpp  server_character.h  server_enemy.cpp  server_enemy.h  server_enemy_bat.h  server_enemy_lizard.h  server_enemy_rat.h  server_player_jazz.cpp  server_player_jazz.h  server_player_lori.cpp  server_player_lori.h  server_player_spaz.cpp  server_player_spaz.h
server_src/game/: game.cpp  game.h  game_casillero.h  game_coordenada.h  game_mundo.cpp  game_mundo.h  game_object.cpp  game_object.h  game_object_collected.cpp  game_object_collected.h  game_object_player.cpp  game_object_player.h  gameloop.cpp  gameloop.h
server_src/game/GameObjects/: game_object.cpp  game_object.h
server_src/game/Map/: game_map.cpp  game_map.h  game_map_reader.cpp  game_map_reader.h  server_game_map_reader.cpp
server_src/game/Weapons/: weapon.cpp  weapon.h
server_src/levels/: flat_test.yaml  mountain_test.yaml  random_test.yaml  snowy_test.yaml
server_src/map/: server_game_map.cpp  server_game_map.h  server_game_map_reader.cpp  server_game_map_reader.h
server_src/map/levels/: flat_test.yaml  mountain_test.yaml  (+2 more)
server_src/objects/: server_ammo.cpp  server_ammo.h  server_carrot.h  server_coin.h  server_gem.h  server_object.cpp  server_object.h  server_poisoned_fruit.h
server_src/weapons/: server_blaster.cpp  server_blaster.h  server_bouncer.cpp  server_bouncer.h  server_electro_blaster.cpp  server_electro_blaster.h  server_freezer.cpp  server_freezer.h  server_pepper_spray.cpp  server_pepper_spray.h  server_rf_missile.cpp  server_rf_missile.h  server_seeker.cpp  server_seeker.h  server_tnt.cpp  server_tnt.h  server_toaster.cpp  server_toaster.h  server_weapon.cpp  server_weapon.h
(+60 files in other folders)
